--- a/cli/aqua-web/aqua-web.job.j2
+++ b/cli/aqua-web/aqua-web.job.j2
@@ -23,6 +23,7 @@ unset SINGULARITY_BIND  # Lumi specific fix for singularity
 
 if [[ "{{ nativeaqua }}" == "true" ]]; then
     if [[ "{{ push }}" == "false" ]]; then
+        aqua set $catalog
         python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp -s $source -d $OUTDIR/{{ catalog }} {{ parallel }}
     else
         bash $AQUA/cli/aqua-web/push_analysis.sh {{ wipe }} $OUTDIR {{ explist }}
@@ -31,6 +32,7 @@ else
     bash $AQUA/cli/aqua-container/load-aqua-container.sh {{ machine }} <<EOF
 #!/bin/bash
 if [[ "{{ push }}" == "false" ]]; then
+    aqua set $catalog
     python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp -s $source -d $OUTDIR/{{ catalog }} {{ parallel }}
 else
     bash $AQUA/cli/aqua-web/push_analysis.sh {{ wipe }} $OUTDIR {{ explist }}
