first templating for catgen

--- a/templates/catgen/config.tmpl
+++ b/templates/catgen/config.tmpl
@@ -35,3 +35,4 @@ note: Null #not mandatory
 # paths
 fdb_home: /gpfs/scratch/ehpc01/experiments/t01o/fdb/HEALPIX_grids
 fdb_home_bridge: Null  # this can be 'Null' or a path
+fdb_info_file: Null #this can be `Null` or a path
