--- a/config/catgen/production.j2
+++ b/config/catgen/production.j2
@@ -52,5 +52,9 @@
         variables: {{ variables }}
         source_grid_name: {{ grid }}
         fixer_name: {% if fixer_name %}{{ fixer_name }}{% else %}{% raw %}climatedt-phase2-production{% endraw %}{% endif %}
+        {% if fdb_info_file %}
+        fdb_info_file: {{ fdb_info_file }}
+        {% endif %}
+
 
         
