--- a/config/catgen/reduced.j2
+++ b/config/catgen/reduced.j2
@@ -51,9 +51,7 @@
         {% endif %}
         variables: {{ variables }}
         source_grid_name: {{ grid }}
-        fixer_name: {% if fixer_name %}{{ fixer_name }}{% else %}{% raw %}climatedt-phase2-reduced{% endraw %}{% endif %} 
+        fixer_name: {{ fixer_name | default('climatedt-phase2-reduced') }} 
         {% if fdb_info_file %}
         fdb_info_file: {{ fdb_info_file }}
         {% endif %}
-
-        
