level in the console command

--- a/templates/lra/config_lra.tmpl
+++ b/templates/lra/config_lra.tmpl
@@ -5,10 +5,13 @@ target:
   resolution: r100
   frequency: monthly
   catalog: {{ catalog }}
-  #region:
+  #region: # optional
   #  name: Italy
   #  lat: [35, 50]
   #  lon: [6, 18]
+  #level: # optional
+  #  level_name: plev
+  #  level: [1000, 500, 200]
 
 
 paths:
