--- a/cli/aqua-web/aqua-web.ensemble.job.j2
+++ b/cli/aqua-web/aqua-web.ensemble.job.j2
@@ -26,7 +26,7 @@ if [[ "{{ nativeaqua }}" == "true" ]]; then
     if [[ "{{ push }}" == "false" ]]; then
         python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization $realization -s $source -d $OUTDIR {{ parallel }}
     else
-        bash $AQUA/cli/aqua-web/push_analysis.sh -e $OUTDIR {{ explist }}
+        bash $AQUA/cli/aqua-web/push_analysis.sh $OUTDIR {{ explist }}
     fi
 else
     bash $AQUA/cli/aqua-container/load-aqua-container.sh {{ machine }} <<EOF
@@ -34,7 +34,7 @@ else
 if [[ "{{ push }}" == "false" ]]; then
     python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization $realization -s $source -d $OUTDIR {{ parallel }}
 else
-    bash $AQUA/cli/aqua-web/push_analysis.sh -e $OUTDIR {{ explist }}
+    bash $AQUA/cli/aqua-web/push_analysis.sh $OUTDIR {{ explist }}
 fi
 EOF
 fi
