--- a/cli/aqua-web/aqua-web.job.j2
+++ b/cli/aqua-web/aqua-web.job.j2
@@ -24,7 +24,7 @@ unset SINGULARITY_BIND  # Lumi specific fix for singularity
 if [[ "{{ nativeaqua }}" == "true" ]]; then
     if [[ "{{ push }}" == "false" ]]; then
         if [[ "{{ ensemble }}" == "true" ]]; then
-            python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization $realization -s $source -d $OUTDIR {{ parallel }}
+            python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization {{ realization }} -s $source -d $OUTDIR {{ parallel }}
         else
             python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp -s $source -d $OUTDIR {{ parallel }}
         fi
@@ -40,7 +40,7 @@ else
 #!/bin/bash
 if [[ "{{ push }}" == "false" ]]; then
     if [[ "{{ ensemble }}" == "true" ]]; then
-        python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization $realization -s $source -d $OUTDIR {{ parallel }}
+        python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp --realization {{ realization }} -s $source -d $OUTDIR {{ parallel }}
     else
         python $AQUA/cli/aqua-analysis/aqua-analysis.py -l debug -c $catalog -m $model -e $exp -s $source -d $OUTDIR {{ parallel }}
     fi
