--- a/cli/lra/_aqua_lra.j2
+++ b/cli/lra/_aqua_lra.j2
@@ -8,7 +8,19 @@
 #SBATCH --mem={{ memory }}
 #SBATCH --error={{ log_error }}
 #SBATCH --output={{ log_output }}
+{% if dependency %}
+#SBATCH --dependency={{ dependency }}
+{% endif %}
 
 
+{% if singularity %}
+{% if machine == 'lumi' %}
+unset SINGULARITY_BIND  # Lumi specific fix for singularity
+{% endif %}
+bash {{ aqua }}/cli/aqua-container/load-aqua-container.sh {{ machine }} <<EOF
+#!/bin/bash
+aqua lra -l info -c {{ config }} -m {{ model }} -e {{ exp }} -s {{ source }} -v {{ varname }}  -w {{ ntasks_per_node }} {{ '-d' if definitive }} {{ '-o' if overwrite }}
+EOF
+{% else %}
 aqua lra -l info -c {{ config }} -m {{ model }} -e {{ exp }} -s {{ source }} -v {{ varname }} -r {{ realization }} -w {{ ntasks_per_node }} {{ '-d' if definitive }} {{ '-o' if overwrite }}
 {% endif %}
