LRA templates update

--- a/templates/drop/config_drop.tmpl
+++ b/templates/drop/config_drop.tmpl
@@ -1,4 +1,4 @@
-# templates for LRA generation. Please modify everything between {{ }} according to your configuration
+# templates for DROP-generated outputs. Please modify everything between {{ }} according to your configuration
 
 #This include the option for the regridding
 target:
@@ -18,7 +18,7 @@ paths:
 options: 
   # loglevel
   loglevel: INFO
-  # Set to True if lra-r100-monthly-zarr should be created and checked
+  # Set to True if r100-monthly-zarr should be created and checked
   zarr: False
   verify_zarr: False
 
