back to config_lra_workflow

--- a/templates/drop/config_lra_workflow.tmpl
+++ b/templates/drop/config_lra_workflow.tmpl
@@ -14,7 +14,7 @@ paths:
 options:  
   loglevel: INFO
 
-# all the variable listed here will be processed by the DROP user
+# all the variable listed here will be processed by the LRA creator
 data:
   %AQUA.MODEL%:
     %AQUA.EXP%: 
