fix replace jinja

--- a/templates/drop/config_lra.tmpl
+++ b/templates/drop/config_lra.tmpl
@@ -6,6 +6,8 @@ target:
   resolution: r100      # 1° resolution (standard LRA)
   frequency: monthly    # monthly frequency (standard LRA)
   catalog: {{ catalog }}
+  startdate: {{ startdate }}
+  enddate: {{ enddate }}
 
 # Output paths
 paths:
