add expid in catgen config

--- a/templates/catgen/config.tmpl
+++ b/templates/catgen/config.tmpl
@@ -22,6 +22,7 @@ activity: highresmip
 experiment:  cont
 generation: 1
 expver: 0001
+expid: o010
 num_of_realizations: 1
 default_realization: 1  # First realization to be loaded by default
 
