--- a/tests/catgen/config-test-catgen.j2
+++ b/tests/catgen/config-test-catgen.j2
@@ -17,8 +17,9 @@ exp: linobanfi
 fixer_name: ifs-destine-v1
 
 # Request/experiment definitions
+# we set an experiment not in the forcing list to check that possibility
 activity: highresmip
-experiment:  cont
+experiment:  abrupt4xco2
 expver: 0001
 num_of_realizations: {{ num_of_realizations }}
 
