add expid to config test catgen

--- a/tests/catgen/config-test-catgen.j2
+++ b/tests/catgen/config-test-catgen.j2
@@ -21,6 +21,7 @@ fixer_name: ifs-destine-v1
 activity: highresmip
 experiment:  abrupt4xco2
 expver: 0001
+expid: test
 num_of_realizations: {{ num_of_realizations }}
 
 # info on the experiment
