add expid to catalog entry jinja

--- a/config/catgen/catalog_entry.j2
+++ b/config/catgen/catalog_entry.j2
@@ -10,6 +10,7 @@
         realization: {% if num_of_realizations > 1 %}{% raw %}'{{ realization }}'{% endraw %}{% else %}1{% endif %} 
         resolution: {{ resolution }}
         expver: {{ expver }}  # To be overwritten by workflow/config file
+        expid: {{ expid }}
         type: fc
         stream: {{ stream }}
         {% if stream == 'clmn' %}
